                    --------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
	 
13-10-14 adotti (testem16-V10-00-03  )
- Fix thread safety in class PhysicsList

28-09-14 mma (testem16-V10-00-02)
- migration to MT

01-08-14 V.Ivant (testem16-V10-00-01)
- PhysicsList - removed SetCut() method, added Synchrotron radiation 
    to all charged particles
	 
09-06-14 mma (testem16-V10-00-00)
- suppress EventAction and its messenger

15-10-13 V.Ivant (testem16-V09-06-05)
- updated vis.mac

11-07-13 I.Hrivnacova (testem16-V09-06-04) 
- In HistoManager: use new analysis manager method SetH1Activation();
  replaced tabulations   

21-06-13 mma (testem16-V09-06-03)
- SteppingVerbose: use G4Step::GetSecondaryInCurrentStep()

07-06-13 mma (testem16-V09-06-02)
- Cosmetic in SteppingAction.
     
18-03-13 mma (testem16-V09-06-01) 
- Applied coding guidelines (long line)
     
13-02-13 I.Hrivnacova (testem16-V09-06-00) 
- Applied coding guidelines (virtual keyword, data members initialization)

16-10-12 mma (testem16-V09-05-03)
-use G4AnalysisManager
- coding convention: virtual
 
12-10-12 V.Ivant (testem16-V09-05-02)
- Migration to explicit units
- Added Rayleigh scattering in the PhysicsList
     
15-04-12 mma (testem16-V09-05-01)
- all classes : apply G4 coding conventions 
      
12-03-12 mma (testem16-V09-05-00)
- HistoManager.hh and .cc : migrate to new g4tools histogramming system
  Do not need aida anymore, nor G4ANALYSIS_USE
- HistoMessenger.hh and .cc : suppress fileType command
- Update Readme and all macros accordingly

09-11-10 M.Asai (testem16-V09-03-04)
- Fix AIDA file option.

13-10-10 V.Ivanchenko (testem16-V09-03-03)